# tokenizer-intrinsic-evals

./: .gitignore  CHANGELOG.md  LICENSE  MIGRATION.md  NOTICE  README.md  apertus_tokenizer_design.md  pyproject.toml
configs/: baseline_tokenizers.json  parity_aware_config_grouped_fineweb2full_quota_tuned.json  sample_tokenizers.json  text_measurement_config_bytes.json  text_measurement_config_lines.json
results/: REPORT.md  REPORT_ablations.md  REPORT_appendix_intrinsic.md  REPORT_flores60.md  REPORT_focus_candidates.md  REPORT_production_safety.md
tokenizer_analysis/: __init__.py  constants.py  main.py  per_example.py
tokenizer_analysis/cli/: __init__.py  run_analysis.py  sanity_check.py  visualize_tokenization.py
tokenizer_analysis/config/: text_measurement.py
tokenizer_analysis/core/: __init__.py  input_providers.py  input_utils.py  tokenizer_wrapper.py  validation.py
tokenizer_analysis/diagnostics/: __init__.py  probe_corpus.py  sanity_check.py
tokenizer_analysis/loaders/: __init__.py  constants.py  multilingual_data.py
tokenizer_analysis/metrics/: __init__.py  base.py  basic.py  code_ast.py  gini.py  information_theoretic.py  math.py  morphscore.py  utf8_integrity.py
tokenizer_analysis/sample_data/: __init__.py  math_samples.json
tokenizer_analysis/tests/: test_basic.py  test_code_ast.py  test_information_theoretic.py  test_latex_tables.py  test_markdown_tables.py  test_plots.py  test_sanity_check.py  test_tokenizer_wrapper.py  test_utf8_integrity.py
tokenizer_analysis/utils/: __init__.py  tokenizer_utils.py
tokenizer_analysis/visualization/: __init__.py  latex_tables.py  markdown_tables.py  plots.py
